--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -40,7 +40,7 @@ jobs:
     name: "Approval"
     runs-on: [ubuntu-latest]
     needs: [PushingArtifact]
-
+    environment: Prod
     steps:
       - name: "Deploying"        
         run: |
