--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -57,7 +57,7 @@ jobs:
           echo "Deploying"
           
   StopRunner:  
-    name: "Start Runner"
+    name: "Stop Runner"
     runs-on: [ubuntu-latest]
     needs: [Deploy]
     steps:      
