--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -65,7 +65,7 @@ jobs:
           echo "Deploying"   
           
   ProdApproval:        
-    name: "Approval"
+    name: "Prod Approval"
     runs-on: [ubuntu-latest]
     needs: [DeployUAT]
     environment: Prod
@@ -75,7 +75,7 @@ jobs:
           echo "Deploying"
   
   DeployProd:        
-    name: "Deploy"
+    name: "Deploy to Prod"
     runs-on: [ubuntu-latest]
     needs: [ProdApproval]
 
