--- a/.github/workflows/testdeploy.yml
+++ b/.github/workflows/testdeploy.yml
@@ -31,7 +31,7 @@ jobs:
           echo "push"
   DevDeploy:
     name: Dev Deploy
-    if: github.event.inputs.environment == 'Dev'
+    if: github.event.inputs.environment == 'Dev' || github.event.inputs.environment == 'Prod'
     runs-on: ubuntu-latest
     needs: [build]
     steps:
