--- a/.github/workflows/testdeploy.yml
+++ b/.github/workflows/testdeploy.yml
@@ -1,18 +1,16 @@
 name: myHerd Build and Deployment
 on:
-   workflow_dispatch:
-     inputs:
-       environment:
-         description: 'Choose the deployment environment!'
-         type: choice
-         required: true
-         default: "Test"
-         options:
-         - "Dev"
-         - "UAT"
-         - "Prod"
-env:
-  ENV_NAME: "Test" #${{ github.event.inputs.environment }}
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Choose the deployment environment!'
+        type: choice
+        required: true
+        default: "Test"
+        options:
+        - "Dev"
+        - "UAT"
+        - "Prod"
 
 permissions:
     id-token: write
@@ -21,30 +19,37 @@ jobs:
   Build:
     name: Build
     runs-on: ubuntu-latest
-    steps:     
-      - name: Build
-        run: |
-          echo "build"
-
+    steps:
       - name: Push Build Artifact
         run: |
-          echo "push"
+          echo "build and push"  
+          
   DevDeploy:
     name: Dev Deploy
     if: github.event.inputs.environment == 'Dev' || github.event.inputs.environment == 'Prod'
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [Build]
     steps:
       - name: Dev Deploy
         run: |
           echo "Dev Deploy"
-  UatDeploy:
+
+  UATDeploy:
     name: UAT Deploy
-    if: github.event.inputs.environment == 'UAT'
+    if: github.event.inputs.environment == 'UAT' || github.event.inputs.environment == 'Prod'
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [Build]
     steps:
-      - name: Uat Deploy
+      - name: Dev Deploy
         run: |
-          echo "UAT Deploy"
-          
+          echo "UAT deployment"
+   
+  ProdDeploy:
+    name: Prod Deploy
+    if: github.event.inputs.environment == 'Prod' || github.event.inputs.environment == 'Prod'
+    runs-on: ubuntu-latest
+    needs: [DevDeploy, UATDeploy]
+    steps:
+      - name: Dev Deploy
+        run: |
+          echo "Prod deployment"
