--- a/.github/workflows/testdeploy.yml
+++ b/.github/workflows/testdeploy.yml
@@ -38,6 +38,7 @@ jobs:
     name: UAT Deploy
     if: github.event.inputs.environment == 'UAT' || github.event.inputs.environment == 'Prod'
     runs-on: ubuntu-latest
+    environment: UAT
     needs: [Build]
     steps:
       - name: Dev Deploy
@@ -47,6 +48,7 @@ jobs:
   ProdDeploy:
     name: Prod Deploy
     if: github.event.inputs.environment == 'Prod' || github.event.inputs.environment == 'Prod'
+    environment: Prod
     runs-on: ubuntu-latest
     needs: [DevDeploy, UATDeploy]
     steps:
