--- a/.github/actions/deploy-test.yml
+++ b/.github/actions/deploy-test.yml
@@ -30,12 +30,24 @@ jobs:
       - name: Push Build Artifact
         run: |
           echo "push"
+  
   DevDeploy:
     name: Dev Deploy
     if: github.event.inputs.environment == 'Dev'
     runs-on: ubuntu-latest
     needs: [build]
     steps:
+      - uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: thilees
+          minimum-approvals: 1
+          issue-title: "Deploying v1.3.5 to prod from staging"
+          issue-body: "Please approve or deny the deployment of version v1.3.5."
+          exclude-workflow-initiator-as-approver: false
+          additional-approved-words: ''
+          additional-denied-words: ''
+      
       - name: Dev Deploy
         run: |
           echo "Dev Deploy"
