--- a/.github/actions/deploy-test.yml
+++ b/.github/actions/deploy-test.yml
@@ -13,7 +13,7 @@ on:
          - "UAT"
          - "Prod"
 env:
-  ENV_NAME: "Test" #${{ github.event.inputs.environment }}
+  ENV_NAME: ${{ github.event.inputs.environment }}
 
 permissions:
     id-token: write
@@ -52,7 +52,7 @@ jobs:
         run: |
           echo "Dev Deploy"
   UatDeploy:
-    name: Dev Deploy
+    name: UAT Deploy
     if: github.event.inputs.environment == 'UAT'
     runs-on: ubuntu-latest
     needs: [build]
